Last changes
Last changes and spotbags resolution